[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "fgradcam"
authors = [
    {name = "Cody Lewis", email = "hello@codymlewis.com"}
]
version = "0.0.1"
description = "A generalized implementation of Grad-CAM for Flax "
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "flax",
    "einops",
    "matplotlib",
]

[project.urls]
repository = "https://github.com/codymlewis/flax_gradcam"

[tool.setuptools.packages.find]
exclude = ["samples/*"]